# PhysicsProject

./: .gitignore  AFaire.txt  CPP_GUI.docx  README.txt  Singleton.cpp  cmakeNOTES.odt  settings.gradle
app/: build.gradle
app/src/main/cpp/: Vector2D.cpp  app.cpp
app/src/main/headers/: Vector2D.hpp  app.h
app/src/test/cpp/: app_test.cpp
src/: .clang-format  CelestialBody.cpp  CelestialBody.hpp  MainClass  MainClass.cpp  MainClass.hpp  SolarSystem.cpp  SolarSystem.hpp  Vector2D.cpp  Vector2D.hpp  makefile  makefile.bak  makefileTMP.mak
src/GUI/: CMakeLists.txt  SliderSFML.cpp  SliderSFML.hpp  View.cpp  View.hpp  guiMain.cpp  guiMain.cpp.bak  guiMain.hpp  guiMain.hpp.bak
src/Main/: CMakeLists.txt  Controller.cpp  Controller.hpp  MainClass.cpp  MainClass.hpp  MainClassLessRand.cpp  MainClassLessRand.hpp  MainSlider.cpp  mainClass.cpp  mainSlider.cpp
src/PhysicLib/: CMakeLists.txt  CelestialBody.cpp  CelestialBody.hpp  CelestialBody.hpp.bak  GlobalValues.cpp  GlobalValues.hpp  Model.cpp  Model.hpp  Planet.cpp  Planet.hpp  PlanetSystem.cpp  PlanetSystem.hpp  Satellite.cpp  Satellite.hpp  SolarSystem.cpp  SolarSystem.hpp  SolarSystemTEMPLATE.cpp  SolarSystemTEMPLATE.hpp  Star.cpp  Star.cpp.bak  Star.hpp  SystemTEMPLATE.hpp  SystemTMP.cpp  Vector2D.cpp  Vector2D.cpp.bak  Vector2D.hpp
src/Test/: CMakeLists.txt  testMain.cpp
